[package]
name = "monero-harness-rs"
version = "0.1.0"
authors = ["Tobin C. Harding <tobin@coblox.tech>"]
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3.5"
monero = "0.9"
reqwest = { version = "0.10", default-features = false, features = ["json", "native-tls"] }
serde = "1.0"
serde_json = "1.0"
spectral = "0.6"
thiserror = "1.0"
tokio = { version = "0.2", default-features = false, features = ["blocking", "macros", "rt-core", "time"] }
tracing = "0.1"
url = "2"